# QtWS-Example

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WeatherApplication.qmlproject  weather.qface
application/: CMakeLists.txt
application/qml/: ExampleApp.qml  MainScreen.ui.qml  WeatherDisplay.qml  WeatherViewModel.qml  main.qml
application/src/: main.cpp
backend/: CMakeLists.txt
backend_simulator/: CMakeLists.txt
designer/: CMakeLists.txt  designer_mock.yaml
designer/com/qtws/weather/: Weather.qml  WeatherService.qml  qmldir
designer/designer_mock/: interface.qml.tpl  module.qml.tpl  qmldir.tpl
frontend/: CMakeLists.txt
imports/: CMakeLists.txt  plugin.cpp
server/: CMakeLists.txt  WeatherServiceImpl.cpp  WeatherServiceImpl.h  WeatherServiceServer.cpp  WeatherServiceServer.h  main.cpp
